# mygrpc

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
.devcontainer/: Dockerfile  devcontainer.json
proto/: Makefile  helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.proto
src/: client.cpp  server.cpp
